syntax = "proto3";

package grpcapi;

enum TaskStatus {
  QUEUED = 0;
  STARTED = 1;
  COMPLETE = 2;
  FAILED = 3;
}

// The worker service definition.
service WorkerService {
  // Sends a task to the worker
  rpc SubmitTask (TaskRequest) returns (TaskResponse) {}
}

// The request message containing the task data.
message TaskRequest {
  string task_id = 1;
  string data = 2;
}

// The response message containing the task result.
message TaskResponse {
  string task_id = 1;
  string message = 2;
  bool success = 3;
}

service CoordinatorService {
  // Sends a task request to the coordinator.
  rpc SubmitTask (ClientTaskRequest) returns (ClientTaskResponse) {}
  // Sends a heartbeat to the server
  rpc SendHeartbeat (HeartbeatRequest) returns (HeartbeatResponse) {}
  // Updates a Task Status
  rpc UpdateTaskStatus (UpdateTaskStatusRequest) returns (UpdateTaskStatusResponse){}
  // Lists current workers known to the coordinator
  rpc ListWorkers (ListWorkersRequest) returns (ListWorkersResponse) {}
}

message ClientTaskRequest {
  string data = 1;
}

message ClientTaskResponse {
  string message = 2;
  string task_id = 3;
}

message HeartbeatRequest {
  uint32 workerId = 1;
  string address = 2;
}

message HeartbeatResponse {
  bool acknowledged = 1;
}

message UpdateTaskStatusRequest {
  string task_id = 1;
  TaskStatus status = 2;
  int64 started_at = 3;
  int64 completed_at = 4;
  int64 failed_at = 5;
  uint32 worker_id = 6; // NEW: which worker is reporting
}

message UpdateTaskStatusResponse {
  bool success = 1;
}

// Workers listing
message ListWorkersRequest {}

message WorkerMeta {
  uint32 id = 1;
  string address = 2;
  string status = 3;            // online/offline/idle/busy (best-effort)
  string last_active_at = 4;    // ISO string
  string current_task_id = 5;   // optional
  uint32 tasks_completed = 6;   // optional
}

message ListWorkersResponse {
  repeated WorkerMeta workers = 1;
}